# AI_agent_system

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: main.py
app/agent/: agent_loop.py  executor.py  planner.py
app/auth/: auth.py  dependencies.py
app/db/: database.py  models.py
app/routes/: auth.py  chat.py  query.py
app/services/: cache.py  llm.py  metrics.py  prompt_builder.py
app/tools/: base_tool.py  calculator.py  retriever.py  web_search.py
data/: documents.json
static/: index.html
