[project]
name = "ai-agent-system"
version = "2.0.0"
description = "Multi-User AI Copilot with persistent memory, authentication, and tool chaining"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "alembic>=1.13.0",
    "pydantic[email]>=2.0.0",
]
